# sourcedepgraph

./: README.md  main.py  pyproject.toml  requirements.txt
sourcedepgraph/: __init__.py  __main__.py  render.py
sourcedepgraph/c/: __init__.py
